[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", path = "C:\\Users\\cadyn\\rust\\Rocket\\core\\lib", features = ["json"] }
ws = { package = "rocket_ws", path = "ws" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio-util = "0.7.9"
buffer = "0.1.9"
hyper = { version = "0.14.27", features = ["client", "stream", "tcp", "http1", "http2"] }
context = "3.0.0"
futures = "0.3.28"
